[gd_scene load_steps=3 format=3 uid="uid://dgkr8arepnxos"]

[ext_resource type="Script" path="res://Scenes/NetworkConnection/NetworkConnection.gd" id="1_enk65"]
[ext_resource type="PackedScene" uid="uid://lpq3opp603px" path="res://Scenes/GameScene.tscn" id="2_c8oir"]

[node name="NetworkConnectionPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enk65")
GameScene = ExtResource("2_c8oir")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="VBoxContainer/NameHBox"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameBox" type="TextEdit" parent="VBoxContainer/NameHBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Unnamed"

[node name="PortHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="VBoxContainer/PortHBox"]
layout_mode = 2
text = "Port"

[node name="PortSettingBox" type="TextEdit" parent="VBoxContainer/PortHBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "7778"

[node name="IpHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IpLabel" type="Label" parent="VBoxContainer/IpHBox"]
layout_mode = 2
text = "IP Adress"

[node name="IpSettingBox" type="TextEdit" parent="VBoxContainer/IpHBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "localhost"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Server"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
